--- a/pages/home/index.html
+++ b/pages/home/index.html
@@ -7,14 +7,15 @@
     <link rel="stylesheet" href="/styles/globalStyles.css">
     <link rel="stylesheet" href="/styles/container.css">
     <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/filters.css">
+    <link rel="stylesheet" href="/styles/filters.css">
     <link rel="stylesheet" href="styles/postFeed.css">
-    <link rel="stylesheet" href="styles/footer.css">
+    <link rel="stylesheet" href="/styles/footer.css">
+    <link rel="stylesheet" href="/styles/animation.css">
     <script defer type="module" src="index.js"></script>
     <title>Living</title>
 </head>
 <body>
-    <main>
+    <main style="position: relative;">
         <div class="container">
             <section class="header">
                 <div class="rightLogo">
@@ -25,7 +26,7 @@
                     <div class="content">
                         <h2>Cuidando de cada <span class="green">detalhe</span> da sua casa</h2>
                         <p>Trazendo uma nova e incrível experiência para você e para seu lar</p>
-                        <strong onclick="scrollar('bottom')">Consumir conteúdos</strong>
+                        <strong id="goTo">Consumir conteúdos</strong>
                     </div>
                 </div>
                 <div class="leftImg">
@@ -49,15 +50,11 @@
                 <button class="arrow" id="arrowRight"> <img src="/img/angle-right.png" alt="angle-right"> </button>
             </section>
             
-            <section style="position: relative;">
-                <ol class="feed">
-                    
-                </ol>
-                <div class="divObserver"></div>
+            <section class="feedSection">
             </section>
 
+            <div class="divObserver" style="position: absolute;"></div>
         </div>
-
     </main>
     <footer class="footerTag">
         <div class="container">
@@ -68,7 +65,7 @@
                 </div>
                 <p>The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software.</p>
             </div>
-            <button onclick="scrollar('top')">Voltar para o topo</button>
+            <button id="backTo">Voltar para o topo</button>
         </div>
     </footer>
 </body>
